--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "web-vitals": "^4.2.4"
   },
@@ -9,7 +13,9 @@
   "description": "iNotebook - your notebook on the cloud",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +26,8 @@
   "bugs": {
     "url": "https://github.com/abdulmomin2003/iNotebook-Backend/issues"
   },
-  "homepage": "https://github.com/abdulmomin2003/iNotebook-Backend#readme"
+  "homepage": "https://github.com/abdulmomin2003/iNotebook-Backend#readme",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
